Ravinder Singh | Fixed issue of Reporting