@@ -1,90 +1,33 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <name>Balkans_Automation</name>
-    <groupId>balkans.bdd.automation</groupId>
-    <artifactId>balkans_automation</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <groupId>aljazeera.test.automation</groupId>
+    <artifactId>balkans-webtests</artifactId>
+    <version>1.0.0-SNAPSHOT</version>
     <packaging>jar</packaging>
 
-    <!-- Dependency properties -->
+    <name>Balkans Website Automation Test using Cucumber and Serenity BDD</name>
+
     <properties>
-        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-
-
-        <!-- Project properties -->
-        <webdriver.driver>chrome</webdriver.driver>
-        <featurePath>/*</featurePath>
-        <tags>@live</tags>
         <env>live</env>
-        <envProp>classpath:properties/live.properties</envProp>
-
-
-        <!-- FrameWork properties -->
-        <!-- Dependency properties -->
-        <cucumber.spring.version>1.2.5</cucumber.spring.version>
-        <cucumber.maven.version>1.2.5</cucumber.maven.version>
-        <serenity.version>1.9.39</serenity.version>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <serenity.version>1.9.45</serenity.version>
+        <serenity.maven.version>1.9.45</serenity.maven.version>
         <serenity.cucumber.version>1.9.15</serenity.cucumber.version>
-
-        <spring.common.version>5.0.9.RELEASE</spring.common.version>
-        <spring-xml.version>3.0.3.RELEASE</spring-xml.version>
-
-        <maven.failsafe.plugin>2.22.0</maven.failsafe.plugin>
-        <java.compiler.version>1.8</java.compiler.version>
-        <maven.compiler.version>3.8.0</maven.compiler.version>
-
-        <slf4j.version>1.8.0-beta2</slf4j.version>
+        <spring.common.version>5.0.5.RELEASE</spring.common.version>
         <poi.version>3.11</poi.version>
-        <jackson.version>1.9.13</jackson.version>
-
-        <jsch.version>0.1.53</jsch.version>
-        <mysql.connector.version>5.1.37</mysql.connector.version>
-
-        <commons-net.version>3.6</commons-net.version>
     </properties>
 
-    <!--Repositories Urls-->
+    <!-- Define the Bintray repos for convenience -->
     <repositories>
-        <repository>
-            <id>spring-libs-snapshot</id>
-            <name>Spring Snapshot Repository</name>
-            <url>http://repo.spring.io/libs-snapshot</url>
-        </repository>
-        <repository>
-            <id>spring-milestone</id>
-            <name>Spring Maven MILESTONE Repository</name>
-            <url>http://repo.spring.io/libs-milestone</url>
-        </repository>
-        <repository>
-            <snapshots>
-                <enabled>false</enabled>
-            </snapshots>
-            <id>thucydides-jira</id>
-            <name>thucydides jira repository</name>
-            <url>http://mvnrepository.com/artifact/net.thucydides.plugins.jira/thucydides-jira-requirements-provider
-            </url>
-        </repository>
-        <repository>
-            <snapshots>
-                <enabled>false</enabled>
-            </snapshots>
-            <id>zapi-maven-repo</id>
-            <name>Zapi Maven Bitbucket repository</name>
-            <url>https://bitbucket.org/zfjdeveloper/zapi-maven-plugin/raw/releases</url>
-        </repository>
         <repository>
             <id>serenity</id>
             <name>bintray</name>
             <url>http://dl.bintray.com/serenity/maven</url>
         </repository>
-
     </repositories>
-
     <pluginRepositories>
         <pluginRepository>
             <id>serenity</id>
@@ -93,11 +36,7 @@
         </pluginRepository>
     </pluginRepositories>
 
-
-    <!--Dependencies-->
     <dependencies>
-
-        <!-- Serenity Dependencies -->
         <dependency>
             <groupId>net.serenity-bdd</groupId>
             <artifactId>serenity-core</artifactId>
@@ -133,38 +72,21 @@
             <artifactId>serenity-spring</artifactId>
             <version>${serenity.version}</version>
         </dependency>
-
         <dependency>
-            <groupId>net.bytebuddy</groupId>
-            <artifactId>byte-buddy</artifactId>
-            <version>1.8.15</version>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-simple</artifactId>
+            <version>1.6.1</version>
         </dependency>
         <dependency>
-            <groupId>org.eclipse.jetty.websocket</groupId>
-            <artifactId>websocket-client</artifactId>
-            <version>9.4.9.v20180320</version>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-log4j12</artifactId>
+            <version>1.6.1</version>
         </dependency>
-        <dependency>
-            <groupId>org.eclipse.jetty</groupId>
-            <artifactId>jetty-http</artifactId>
-            <version>9.4.12.v20180830</version>
-        </dependency>
-        <dependency>
-            <groupId>org.eclipse.jetty.websocket</groupId>
-            <artifactId>websocket-api</artifactId>
-            <version>9.4.12.v20180830</version>
-        </dependency>
-        <dependency>
-            <groupId>org.eclipse.jetty</groupId>
-            <artifactId>jetty-util</artifactId>
-            <version>9.4.12.v20180830</version>
-        </dependency>
-        <dependency>
-            <groupId>org.eclipse.jetty</groupId>
-            <artifactId>jetty-io</artifactId>
-            <version>9.4.12.v20180830</version>
-        </dependency>
-
+        <!--<dependency>-->
+            <!--<groupId>org.slf4j</groupId>-->
+            <!--<artifactId>slf4j-api</artifactId>-->
+            <!--<version>1.6.1</version>-->
+        <!--</dependency>-->
         <dependency>
             <groupId>org.codehaus.groovy</groupId>
             <artifactId>groovy-all</artifactId>
@@ -174,33 +96,19 @@
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
             <version>4.12</version>
+            <!--<scope>test</scope>-->
         </dependency>
         <dependency>
             <groupId>org.assertj</groupId>
             <artifactId>assertj-core</artifactId>
             <version>1.7.0</version>
+            <!--<scope>test</scope>-->
         </dependency>
         <dependency>
             <groupId>org.apache.commons</groupId>
             <artifactId>commons-text</artifactId>
-            <version>1.3</version>
-        </dependency>
-
-        <!-- sl4j logging-->
-        <dependency>
-            <groupId>org.slf4j</groupId>
-            <artifactId>slf4j-log4j12</artifactId>
-            <version>${slf4j.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>org.slf4j</groupId>
-            <artifactId>slf4j-api</artifactId>
-            <version>${slf4j.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>ch.qos.logback</groupId>
-            <artifactId>logback-classic</artifactId>
-            <version>1.3.0-alpha4</version>
+            <version>1.1</version>
+            <!--<scope>test</scope>-->
         </dependency>
 
         <!-- Spring -->
@@ -209,11 +117,6 @@
             <artifactId>spring-context</artifactId>
             <version>${spring.common.version}</version>
         </dependency>
-        <!--<dependency>
-            <groupId>org.springframework</groupId>
-            <artifactId>spring-web</artifactId>
-            <version>${spring.common.version}</version>
-        </dependency>-->
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-core</artifactId>
@@ -227,7 +130,7 @@
         <dependency>
             <groupId>org.springframework.ws</groupId>
             <artifactId>spring-xml</artifactId>
-            <version>${spring-xml.version}</version>
+            <version>3.0.3.RELEASE</version>
         </dependency>
 
         <!-- For accessing Microsoft documents in java -->
@@ -247,44 +150,12 @@
         <dependency>
             <groupId>org.codehaus.jackson</groupId>
             <artifactId>jackson-mapper-asl</artifactId>
-            <version>${jackson.version}</version>
-        </dependency>
-
-        <dependency>
-            <groupId>org.apache.maven</groupId>
-            <artifactId>maven-core</artifactId>
-            <version>3.5.4</version>
+            <version>1.9.13</version>
         </dependency>
 
 
-        <!--&lt;!&ndash; SSH &ndash;&gt;-->
-        <!--<dependency>-->
-            <!--<groupId>com.jcraft</groupId>-->
-            <!--<artifactId>jsch</artifactId>-->
-            <!--<version>${jsch.version}</version>-->
-        <!--</dependency>-->
-
-        <!--&lt;!&ndash; mysql connector &ndash;&gt;-->
-        <!--<dependency>-->
-            <!--<groupId>mysql</groupId>-->
-            <!--<artifactId>mysql-connector-java</artifactId>-->
-            <!--<version>${mysql.connector.version}</version>-->
-        <!--</dependency>-->
-
-        <!--<dependency>
-            <groupId>org.skyscreamer</groupId>
-            <artifactId>jsonassert</artifactId>
-            <version>1.3.0</version>
-        </dependency>-->
-
-        <!--<dependency>-->
-            <!--<groupId>xmldb</groupId>-->
-            <!--<artifactId>xmldb-api</artifactId>-->
-            <!--<version>20021118</version>-->
-        <!--</dependency>-->
 
     </dependencies>
-
     <build>
         <resources>
             <resource>
@@ -301,16 +172,7 @@
         </resources>
 
         <plugins>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-surefire-plugin</artifactId>
-                <version>2.22.0</version>
-                <configuration>
-                    <testFailureIgnore>true</testFailureIgnore>
-                    <parallel>classes</parallel>
-                    <threadCount>5</threadCount>
-                </configuration>
-            </plugin>
+
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-enforcer-plugin</artifactId>
@@ -320,23 +182,15 @@
                         <id>enforce</id>
                         <configuration>
                             <rules>
-                                <requireUpperBoundDeps/>
+                                <AlwaysPass/>
                             </rules>
+                            <fail>true</fail>
                         </configuration>
                         <goals>
                             <goal>enforce</goal>
                         </goals>
                     </execution>
                 </executions>
-            </plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-compiler-plugin</artifactId>
-                <version>${maven.compiler.version}</version>
-                <configuration>
-                    <source>${java.compiler.version}</source>
-                    <target>${java.compiler.version}</target>
-                </configuration>
             </plugin>
 
             <plugin>
@@ -361,21 +215,23 @@
             </plugin>
 
             <plugin>
-                <artifactId>maven-failsafe-plugin</artifactId>
-                <version>${maven.failsafe.plugin}</version>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>2.18</version>
                 <configuration>
-                    <systemPropertyVariables>
-                        <webdriver.driver>${webdriver.driver}</webdriver.driver>
-                        <cucumber.options>--tags ${tags}</cucumber.options>
-                        <env>${env}</env>
-                    </systemPropertyVariables>
+                    <skip>true</skip>
+                </configuration>
+            </plugin>
+            <plugin>
+                <artifactId>maven-failsafe-plugin</artifactId>
+                <version>2.18</version>
+                <configuration>
                     <includes>
-                        <include>**/*Tt.java</include>
-                        <include>**/T*.java</include>
-                        <include>**/When*.java</include>
-                        <include>**/*TestSuite.java</include>
-                        <include>**/r/*</include>
+                        <include>**/cucumber/*.java</include>
                     </includes>
+                    <reuseForks>true</reuseForks>
+                    <!--<forkCount>2</forkCount>-->
+                    <argLine>-Xmx1024m -XX:MaxPermSize=256m</argLine>
                 </configuration>
                 <executions>
                     <execution>
@@ -387,9 +243,18 @@
                 </executions>
             </plugin>
             <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.2</version>
+                <configuration>
+                    <source>1.8</source>
+                    <target>1.8</target>
+                </configuration>
+            </plugin>
+            <plugin>
                 <groupId>net.serenity-bdd.maven.plugins</groupId>
                 <artifactId>serenity-maven-plugin</artifactId>
-                <version>${serenity.version}</version>
+                <version>${serenity.maven.version}</version>
                 <dependencies>
                     <dependency>
                         <groupId>net.serenity-bdd</groupId>
@@ -407,8 +272,6 @@
                     </execution>
                 </executions>
             </plugin>
-
         </plugins>
     </build>
-
 </project>
